--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <a href="schedule.html"> Schedule </a>
               </li>
 
+              <li class="nav-item">
+                <a href="halving.html"> Halving </a>
+              </li>
 
               <li class="nav-item">
                 <a href="https://mitbitcoin.devpost.com/"> Hackathon </a>
@@ -155,6 +158,14 @@
             </svg>
           </a>
 
+          <a href="https://www.youtube.com/@MITBitcoinClub/streams" class="btn-outline2">
+            <span> Live Stream </span>
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289"
+                stroke="black" stroke-width="1.66667" stroke-linecap="square" />
+            </svg>
+          </a>
+
         </div><!-- /.hero-btns -->
         
       </div><!-- /.hero-txt -->
@@ -166,9 +177,6 @@
       <img src="assets/img/hero/woman.png" class="img-fluid" alt="map">
     </div><!-- /.mobile-img -->
   </section><!-- /.hero-area -->
-
-
-
 
   <section class="expo">
     <div class="container">
@@ -522,22 +530,22 @@
           <div class="col-lg-5">
             <ul class="footer-links">
               <li>
-                <a href="#"> About </a>
+                <a href="about.html"> About </a>
               </li>
               <li>
-                <a href="#"> Team </a>
+                <a href="team.html" class="active"> Team </a>
               </li>
               <li>
-                <a href="#"> Speakers </a>
+                <a href="speakers.html"> Speakers </a>
               </li>
               <li>
-                <a href="#"> sponsors </a>
-              </li>
-              <li>
-                <a href="https://www.mitbitcoinexpo.org/prior-expos"> prior expos </a>
+                <a href="sponsors.html"> sponsors </a>
               </li>
               <li>
                 <a href="schedule.html"> Schedule </a>
+              </li>
+              <li>
+                <a href="https://mitbitcoin.devpost.com/"> Hackathon </a>
               </li>
             </ul><!-- /.footer-links -->
           </div><!-- /.col-lg-4 -->
