--- a/nobeldao.html
+++ b/nobeldao.html
@@ -75,6 +75,9 @@
                 <a href="schedule.html"> Schedule </a>
               </li>
 
+              <li class="nav-item">
+                <a href="halving.html"> Halving </a>
+              </li>
 
               <li class="nav-item">
                 <a href="https://mitbitcoin.devpost.com/"> Hackathon </a>
@@ -184,7 +187,7 @@
                 <a href="about.html"> About </a>
               </li>
               <li>
-                <a href="team.html"> Team </a>
+                <a href="team.html" class="active"> Team </a>
               </li>
               <li>
                 <a href="speakers.html"> Speakers </a>
@@ -193,10 +196,10 @@
                 <a href="sponsors.html"> sponsors </a>
               </li>
               <li>
-                <a href="https://www.mitbitcoinexpo.org/prior-expos"> prior expos </a>
+                <a href="schedule.html"> Schedule </a>
               </li>
               <li>
-                <a href="schedule.html"> Schedule </a>
+                <a href="https://mitbitcoin.devpost.com/"> Hackathon </a>
               </li>
             </ul><!-- /.footer-links -->
           </div><!-- /.col-lg-4 -->
