--- a/schedule.html
+++ b/schedule.html
@@ -62,7 +62,7 @@
 
 
               <li class="nav-item">
-                <a href="sponsors.html"> sponsors </a>
+                <a href="sponsors.html"> Sponsors </a>
               </li>
 
 
@@ -75,6 +75,9 @@
                 <a href="schedule.html" class="active"> Schedule </a>
               </li>
 
+              <li class="nav-item">
+                <a href="halving.html"> Halving </a>
+              </li>
 
               <li class="nav-item">
                 <a href="https://mitbitcoin.devpost.com/"> Hackathon </a>
@@ -162,19 +165,19 @@
                 <a href="about.html"> About </a>
               </li>
               <li>
-                <a href="team.html"> Team </a>
+                <a href="team.html" class="active"> Team </a>
               </li>
               <li>
                 <a href="speakers.html"> Speakers </a>
               </li>
               <li>
-                <a href="sponsors.html"> sponsors </a>
-              </li>
-              <li>
-                <a href="https://www.mitbitcoinexpo.org/prior-expos"> prior expos </a>
+                <a href="sponsors.html"> Sponsors </a>
               </li>
               <li>
                 <a href="schedule.html"> Schedule </a>
+              </li>
+              <li>
+                <a href="https://mitbitcoin.devpost.com/"> Hackathon </a>
               </li>
             </ul><!-- /.footer-links -->
           </div><!-- /.col-lg-4 -->
