--- a/speakers.html
+++ b/speakers.html
@@ -75,6 +75,9 @@
                 <a href="schedule.html"> Schedule </a>
               </li>
 
+              <li class="nav-item">
+                <a href="halving.html"> Halving </a>
+              </li>
 
               <li class="nav-item">
                 <a href="https://mitbitcoin.devpost.com/"> Hackathon </a>
@@ -395,7 +398,7 @@
           <div class="team-single">
             <img src="assets/img/speakers/michael.jpeg" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Micahel Maurer </h5>
+              <h5> Michael Maurer </h5>
               <p>
                 Student & CBDC Software Engineer, MIT Digital Currency Initiative
               </p>
@@ -592,7 +595,7 @@
                 <a href="about.html"> About </a>
               </li>
               <li>
-                <a href="team.html"> Team </a>
+                <a href="team.html" class="active"> Team </a>
               </li>
               <li>
                 <a href="speakers.html"> Speakers </a>
@@ -601,10 +604,10 @@
                 <a href="sponsors.html"> sponsors </a>
               </li>
               <li>
-                <a href="https://www.mitbitcoinexpo.org/prior-expos"> prior expos </a>
+                <a href="schedule.html"> Schedule </a>
               </li>
               <li>
-                <a href="schedule.html"> Schedule </a>
+                <a href="https://mitbitcoin.devpost.com/"> Hackathon </a>
               </li>
             </ul><!-- /.footer-links -->
           </div><!-- /.col-lg-4 -->
