--- a/halving.html
+++ b/halving.html
@@ -134,7 +134,7 @@
 
   <section class="countdown-secs">
     <div class="countdown">
-      <iframe src="https://widget.nicehash.com/countdown/btc-halving-2024-05-10-12-00" width="480" height="420" scrolling="no" id="nhiframe"></iframe>
+      <iframe src="https://watcher.guru/bitcoin-halving" width="960" height="525"></iframe>
     </div><!-- /.container -->
   </section><!-- /.countdown -->
 
