--- a/sponsors.html
+++ b/sponsors.html
@@ -76,7 +76,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="halving.html"> Halving </a>
+                <a href="https://watcher.guru/bitcoin-halving"> Halving </a>
               </li>
 
               <li class="nav-item">
