--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </svg>
           </a>
 
-          <a href="https://www.youtube.com/@MITBitcoinClub/streams" class="btn-outline2">
+          <a href="https://web.mit.edu/webcast/bitcoin-expo-s24/" class="btn-outline2">
             <span> Live Stream </span>
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289"
