--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
               <ul id="nav" class="navbar-nav nav-social ms-auto">
                 <li class="nav-item">
-                  <a href="contact.html"> contact us </a>
+                  <a href="contact.html"> Contact Us </a>
                 </li>
 
                 <li class="nav-item">
